[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/open_toggle_door.gd" type="Script" id=1]
[ext_resource path="res://scenes/level_misc/toggle_door_obstacle.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/new_level_loaded.gd" type="Script" id=3]
[ext_resource path="res://scripts/tutorial_win_area.gd" type="Script" id=4]
[ext_resource path="res://scenes/enemies/camera_guard.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/game_manager.gd" type="Script" id=6]
[ext_resource path="res://materials/walls.material" type="Material" id=7]
[ext_resource path="res://materials/divider.material" type="Material" id=8]
[ext_resource path="res://scenes/level_misc/interactable.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/menus/pause_menu.tscn" type="PackedScene" id=11]

[sub_resource type="QuadMesh" id=1]
material = ExtResource( 7 )
size = Vector2( 32, 66 )

[sub_resource type="CubeMesh" id=2]
material = ExtResource( 8 )
size = Vector3( 2, 6, 2 )

[sub_resource type="CubeMesh" id=3]
material = ExtResource( 8 )
size = Vector3( 2, 66, 2 )

[sub_resource type="QuadMesh" id=4]
material = ExtResource( 7 )
size = Vector2( 3, 66 )

[sub_resource type="QuadMesh" id=5]
material = ExtResource( 7 )
size = Vector2( 96, 3 )

[sub_resource type="QuadMesh" id=6]
material = ExtResource( 7 )
size = Vector2( 102, 3 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 48, 3, 1 )

[node name="Main" type="Node"]

[node name="GameManager" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 6 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 45 )
cull_mask = 3
current = true
near = 40.0
far = 47.0
__meta__ = {
"_edit_lock_": true
}

[node name="Players" type="Spatial" parent="."]

[node name="PauseMenuControl" parent="." instance=ExtResource( 11 )]

[node name="Root3D" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="PlayerSpawnLocations" type="Spatial" parent="Root3D"]

[node name="Spawn1" type="Spatial" parent="Root3D/PlayerSpawnLocations"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -29, -27.5, 0 )

[node name="Spawn2" type="Spatial" parent="Root3D/PlayerSpawnLocations"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 29, -27.5, 0 )

[node name="Spawn3" type="Spatial" parent="Root3D/PlayerSpawnLocations"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -35, -27.5, 0 )

[node name="Spawn4" type="Spatial" parent="Root3D/PlayerSpawnLocations"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 35, -27.5, 0 )

[node name="Spawn5" type="Spatial" parent="Root3D/PlayerSpawnLocations"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -23, -27.5, 0 )

[node name="Spawn6" type="Spatial" parent="Root3D/PlayerSpawnLocations"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23, -27.5, 0 )

[node name="Spawn7" type="Spatial" parent="Root3D/PlayerSpawnLocations"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -41, -27.5, 0 )

[node name="Spawn8" type="Spatial" parent="Root3D/PlayerSpawnLocations"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 41, -27.5, 0 )

[node name="LeftRoom" type="Spatial" parent="Root3D"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -32, 0, 0 )

[node name="FloorMeshes" type="Spatial" parent="Root3D/LeftRoom"]

[node name="LeftFloor" type="MeshInstance" parent="Root3D/LeftRoom/FloorMeshes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5 )
mesh = SubResource( 1 )
material/0 = null
__meta__ = {
"_edit_lock_": true
}

[node name="InvisibleWalls" type="StaticBody" parent="Root3D/LeftRoom"]
collision_layer = 4
collision_mask = 2

[node name="Left" type="CollisionPolygon" parent="Root3D/LeftRoom/InvisibleWalls"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, -16, 0, 0 )
depth = 60.0
polygon = PoolVector2Array( 0, -1, 0, 1 )

[node name="Right" type="CollisionPolygon" parent="Root3D/LeftRoom/InvisibleWalls"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 14.5, 0, 0 )
depth = 60.0
polygon = PoolVector2Array( 0, -1, 0, 1 )

[node name="Up" type="CollisionPolygon" parent="Root3D/LeftRoom/InvisibleWalls"]
transform = Transform( -1.62921e-07, -1.62921e-07, 1, -1, 2.65433e-14, -1.62921e-07, 0, -1, -1.62921e-07, -0.75, 30, 0 )
depth = 30.5
polygon = PoolVector2Array( 0, -1, 0, 1 )

[node name="Down" type="CollisionPolygon" parent="Root3D/LeftRoom/InvisibleWalls"]
transform = Transform( -1.62921e-07, -1.62921e-07, 1, -1, 2.65433e-14, -1.62921e-07, 0, -1, -1.62921e-07, -0.75, -30, 0 )
depth = 30.5
polygon = PoolVector2Array( 0, -1, 0, 1 )

[node name="Interactables" type="Spatial" parent="Root3D/LeftRoom"]

[node name="ToggleDoorInteractable" parent="Root3D/LeftRoom/Interactables" instance=ExtResource( 9 )]
transform = Transform( 0.574348, -0.818611, 0, 0.818611, 0.574348, 0, 0, 0, 1, -9.46543, -5.26737, 3.8147e-06 )
script = ExtResource( 1 )
toggle_door_obstacle_path = NodePath("../../ToggleDoorObstacle")

[node name="ToggleDoorObstacle" parent="Root3D/LeftRoom" instance=ExtResource( 2 )]

[node name="MiddleRoom" type="Spatial" parent="Root3D"]

[node name="FloorMeshes" type="Spatial" parent="Root3D/MiddleRoom"]

[node name="MiddleFloor" type="MeshInstance" parent="Root3D/MiddleRoom/FloorMeshes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5 )
mesh = SubResource( 1 )
material/0 = null

[node name="Guards" type="Spatial" parent="Root3D/MiddleRoom"]

[node name="CameraGuard" parent="Root3D/MiddleRoom/Guards" instance=ExtResource( 5 )]
transform = Transform( -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0, 1, -8.36616, -7.19317, 0 )
direction = Vector3( 0, 0, 0 )

[node name="LeftDivider" type="Spatial" parent="Root3D/MiddleRoom"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -16.5, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="MovableWall" type="Spatial" parent="Root3D/MiddleRoom/LeftDivider"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -7.32074, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="WallMesh" type="MeshInstance" parent="Root3D/MiddleRoom/LeftDivider/MovableWall"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )
mesh = SubResource( 2 )
material/0 = null

[node name="FOVCollider" type="StaticBody" parent="Root3D/MiddleRoom/LeftDivider/MovableWall"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 1 )
collision_layer = 8
collision_mask = 0

[node name="CollisionPolygon" type="CollisionPolygon" parent="Root3D/MiddleRoom/LeftDivider/MovableWall/FOVCollider"]
depth = 2.0
polygon = PoolVector2Array( 0, -3, 0, 3 )

[node name="DividerMesh" type="MeshInstance" parent="Root3D/MiddleRoom/LeftDivider"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )
mesh = SubResource( 3 )
material/0 = null

[node name="RightDivider" type="Spatial" parent="Root3D/MiddleRoom"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 16.5, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="MovableWall" type="Spatial" parent="Root3D/MiddleRoom/RightDivider"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.33179, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="WallMesh" type="MeshInstance" parent="Root3D/MiddleRoom/RightDivider/MovableWall"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )
mesh = SubResource( 2 )
material/0 = null

[node name="FOVCollider" type="StaticBody" parent="Root3D/MiddleRoom/RightDivider/MovableWall"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 1 )
collision_layer = 8
collision_mask = 0

[node name="CollisionPolygon" type="CollisionPolygon" parent="Root3D/MiddleRoom/RightDivider/MovableWall/FOVCollider"]
depth = 2.0
polygon = PoolVector2Array( 0, -3, 0, 3 )

[node name="DividerMesh" type="MeshInstance" parent="Root3D/MiddleRoom/RightDivider"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )
mesh = SubResource( 3 )
material/0 = null

[node name="RightRoom" type="Spatial" parent="Root3D"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 32, 0, 0 )

[node name="FloorMeshes" type="Spatial" parent="Root3D/RightRoom"]

[node name="RightFloor" type="MeshInstance" parent="Root3D/RightRoom/FloorMeshes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5 )
mesh = SubResource( 1 )
material/0 = null
__meta__ = {
"_edit_lock_": true
}

[node name="InvisibleWalls" type="StaticBody" parent="Root3D/RightRoom"]
collision_layer = 4
collision_mask = 2

[node name="Left" type="CollisionPolygon" parent="Root3D/RightRoom/InvisibleWalls"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, -14.5, 0, 0 )
depth = 60.0
polygon = PoolVector2Array( 0, -1, 0, 1 )

[node name="Right" type="CollisionPolygon" parent="Root3D/RightRoom/InvisibleWalls"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 16, 0, 0 )
depth = 60.0
polygon = PoolVector2Array( 0, -1, 0, 1 )

[node name="Up" type="CollisionPolygon" parent="Root3D/RightRoom/InvisibleWalls"]
transform = Transform( -1.62921e-07, -1.62921e-07, 1, -1, 2.65433e-14, -1.62921e-07, 0, -1, -1.62921e-07, 0.75, 30, 0 )
depth = 30.5
polygon = PoolVector2Array( 0, -1, 0, 1 )

[node name="Down" type="CollisionPolygon" parent="Root3D/RightRoom/InvisibleWalls"]
transform = Transform( -1.62921e-07, -1.62921e-07, 1, -1, 2.65433e-14, -1.62921e-07, 0, -1, -1.62921e-07, 0.75, -30, 0 )
depth = 30.5
polygon = PoolVector2Array( 0, -1, 0, 1 )

[node name="Interactables" type="Spatial" parent="Root3D/RightRoom"]

[node name="ToggleDoorInteractable" parent="Root3D/RightRoom/Interactables" instance=ExtResource( 9 )]
transform = Transform( 0.574348, 0.818611, 0, -0.818611, 0.574348, 0, 0, 0, 1, 9.465, -5.267, 0 )
script = ExtResource( 1 )
toggle_door_obstacle_path = NodePath("../../ToggleDoorObstacle")

[node name="ToggleDoorObstacle" parent="Root3D/RightRoom" instance=ExtResource( 2 )]
transform = Transform( -1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 15, -1.5 )

[node name="OuterWalls" type="Spatial" parent="Root3D"]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="LeftWall" type="MeshInstance" parent="Root3D/OuterWalls"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -48, 0, 0 )
mesh = SubResource( 4 )
material/0 = null

[node name="RightWall" type="MeshInstance" parent="Root3D/OuterWalls"]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 48, 0, 0 )
mesh = SubResource( 4 )
material/0 = null

[node name="DownWall" type="MeshInstance" parent="Root3D/OuterWalls"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, -30, 0 )
mesh = SubResource( 5 )
material/0 = null

[node name="LeftRim" type="MeshInstance" parent="Root3D/OuterWalls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -49.5, 0, 1.5 )
mesh = SubResource( 4 )
material/0 = null

[node name="RightRim" type="MeshInstance" parent="Root3D/OuterWalls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 49.5, 0, 1.5 )
mesh = SubResource( 4 )
material/0 = null

[node name="DownRim" type="MeshInstance" parent="Root3D/OuterWalls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -31.5, 1.5 )
mesh = SubResource( 6 )
material/0 = null

[node name="TutorialWinArea" type="Area" parent="Root3D"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 27, 0 )
collision_layer = 1024
collision_mask = 2
script = ExtResource( 4 )
main_menu_path = "res://scenes/menus/main_menu.tscn"

[node name="CollisionShape" type="CollisionShape" parent="Root3D/TutorialWinArea"]
shape = SubResource( 7 )

[node name="Timer" type="Timer" parent="Root3D/TutorialWinArea"]
wait_time = 2.0
one_shot = true

[node name="DirectionalLight" type="DirectionalLight" parent="Root3D"]
transform = Transform( 0.6743, -0.549869, -0.492914, 0.732855, 0.580354, 0.355124, 0.090793, -0.600694, 0.794307, 0, 0, 0 )
light_cull_mask = 4293918721
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}
[connection signal="body_entered" from="Root3D/TutorialWinArea" to="Root3D/TutorialWinArea" method="on_player_entered"]
[connection signal="body_exited" from="Root3D/TutorialWinArea" to="Root3D/TutorialWinArea" method="on_player_exited"]
[connection signal="timeout" from="Root3D/TutorialWinArea/Timer" to="Root3D/TutorialWinArea" method="on_timer_timeout"]
